--- a/app/templates/posts/new_post.html
+++ b/app/templates/posts/new_post.html
@@ -49,7 +49,7 @@
                   <select id="select-esports">
                     <option value="no">Não</option>
                     <option value="yes">Sim</option>
-                  <input type="checkbox" class="is-esport" id="is-esport">
+                  <input accept="" type="checkbox" class="is-esport" id="is-esport">
                   <div class="source">
                     <label for="source-question">Esta notícia possui alguma fonte de referência?</label>
                     <select id="source-question">
