--- a/app/static/css/header.css
+++ b/app/static/css/header.css
@@ -29,38 +29,10 @@
     display: none;
 }
 
-.web .header .loader {
-    position: fixed;
-    display: flex;
-    background-color: #000000;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: 10;
-    justify-content: center;
-    align-items: center;
-}
-
-.loader.hidden {
-    animation: fadeOut 0.2s;
-    animation-fill-mode: forwards;
-}
-
-@keyframes fadeOut {
-    100% {
-        opacity: 0;
-        visibility: hidden;
-    }
-}
-
 .arrow-right {
     position: relative;
     left: 5px;
     top: -3px;
-    -webkit-transition: all 0.2s linear;
-    -moz-transition: all 0.2s linear;
-    transition: all 0.2s linear;
     -webkit-transform: rotate(-90deg);
     -moz-transform: rotate(-90deg);
     transform: rotate(-90deg);
@@ -70,50 +42,9 @@
     position: relative;
     margin-right: 5px;
     top: -3px;
-    -webkit-transition: all 0.2s linear;
-    -moz-transition: all 0.2s linear;
-    transition: all 0.2s linear;
     -webkit-transform: rotate(90deg);
     -moz-transform: rotate(90deg);
     transform: rotate(90deg);
-}
-
-.loader .loader-figure {
-    display: flex;
-    width: 50px;
-    height: 50px;
-    border: 2px solid #111111;
-    border-left-color: #ffa31a;
-    border-radius: 50%;
-    animation: loaderFigure 1s linear infinite;
-    padding: 10px;
-    justify-content: center;
-    align-items: center;
-}
-
-@keyframes loaderFigure {
-    to {
-        transform: rotate(360deg)
-    }
-}
-
-.loader .loader-figure .center-logo {
-    position: fixed;
-    animation: logo 1s linear infinite;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-@keyframes logo {
-    to {
-        transform: rotate(-360deg)
-    }
-}
-
-.loader-figure .center-logo img {
-    width: 40px;
-    height: 40px;
 }
 
 .web .header .header-mobile {
@@ -130,17 +61,16 @@
 .header .header-1part .header-items {
     display: flex;
     list-style-type: none;
+    align-items: center;
 }
 
 .header .header-1part .header-1part-1opc {
     text-decoration: none;
     color: #FFFFFF;
-    padding: 3px 10px;
-    font-size: 14px;
+    padding: 0px 10px;
+    font-size: 12px;
     user-select: none;
-    -webkit-transition: all 0.1s linear;
-    -moz-transition: all 0.1s linear;
-    transition: all 0.1s linear;
+    text-transform: uppercase;
 }
 
 .header .header-1part #header-login {
@@ -149,7 +79,6 @@
 
 .header .header-1part .header-1part-1opc:hover {
     color: #ffa31a;
-    opacity: 0.9;
 }
 
 .header .header-1part .prim-header {
@@ -164,19 +93,16 @@
 .header .header-1part .header-1part-2opc .prim-header .option-title {
     text-decoration: none;
     color: #FFFFFF;
-    padding: 3px 10px;
-    font-size: 14px;
+    padding: 0px 10px;
+    font-size: 12px;
     user-select: none;
-    display: inline-block;
     font-weight: 600;
     overflow: hidden;
-    text-transform: capitalize;
-    transition: color 1s cubic-bezier(0.06, 0.81, 0, 0.98), border-color 0.5s cubic-bezier(0.06, 0.81, 0, 0.98);
     font-weight: 400;
+    text-transform: uppercase;
 }
 
 .header-1part-2opc .prim-header:hover>.option-title {
-    opacity: 0.9;
     color: #ffa31a;
 }
 
@@ -193,9 +119,6 @@
     position: relative;
     left: 3px;
     top: -2px;
-    -webkit-transition: all 0.2s linear;
-    -moz-transition: all 0.2s linear;
-    transition: all 0.2s linear;
 }
 
 .header-1part-2opc .prim-header:hover>.games-options {
@@ -207,14 +130,13 @@
     visibility: hidden;
     position: absolute;
     left: 0;
-    top: 25px;
+    top: 20px;
     background-color: #111111;
     text-align: left;
     font-size: 1rem;
     min-width: 200px;
     width: max-content;
     opacity: 0;
-    transition: opacity 0.5s cubic-bezier(0.06, 0.81, 0, 0.98) 0s, visibility 0s;
     z-index: 3;
     box-shadow: 0px 0px 5px black;
 }
@@ -225,18 +147,15 @@
     list-style-type: none;
 }
 
-.header-1part-2opc .games-options a {
+.header-1part-2opc .games-options li a {
     display: block;
     text-decoration: none;
     color: #FFFFFF;
-    font-size: 12px;
+    font-size: 11px;
     font-weight: 400;
     padding: 10px 10px;
     user-select: none;
-    border-bottom: 1px solid #111111;
-    -webkit-transition: all 0.1s linear;
-    -moz-transition: all 0.1s linear;
-    transition: all 0.1s linear;
+    text-transform: uppercase;
 }
 
 .header-1part-2opc .games-options a:hover {
@@ -499,9 +418,6 @@
     position: relative;
     left: 5px;
     top: -4px;
-    -webkit-transition: all 0.2s linear;
-    -moz-transition: all 0.2s linear;
-    transition: all 0.2s linear;
 }
 
 .header .header-2part .user:hover>.options {
@@ -520,7 +436,6 @@
     min-width: 200px;
     width: max-content;
     opacity: 0;
-    transition: opacity 0.5s cubic-bezier(0.06, 0.81, 0, 0.98) 0s, visibility 0s;
     z-index: 3;
     box-shadow: 0px 0px 5px black;
 }
@@ -535,14 +450,12 @@
     display: block;
     text-decoration: none;
     color: #FFFFFF;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 400;
-    padding: 20px 15px;
+    padding: 10px 15px;
     user-select: none;
     border-bottom: 1px solid #111111;
-    -webkit-transition: all 0.1s linear;
-    -moz-transition: all 0.1s linear;
-    transition: all 0.1s linear;
+    text-transform: uppercase;
 }
 
 .user .options .user-options a:hover {
@@ -745,9 +658,7 @@
         font-size: 13px;
         font-weight: 500;
         border-radius: 5px;
-        -webkit-transition: all 0.1s linear;
-        -moz-transition: all 0.1s linear;
-        transition: all 0.1s linear;
+        text-transform: uppercase;
     }
     .header-1part .header-1part-top .Favicon {
         width: 50px;
@@ -874,6 +785,7 @@
         background-color: #212121;
         border: 0 none;
         margin-top: 1px;
+        text-transform: uppercase;
     }
     .web .header .header-2part {
         display: none;
