--- a/app/templates/notices/notice.html
+++ b/app/templates/notices/notice.html
@@ -67,7 +67,7 @@
                     {% endfor %}
                     {% if notice.source_name != '' and notice.source_name != None %}
                       <span class="source">
-                        <i class="far fa-newspaper"></i> Fonte:
+                        <i class="far fa-newspaper"></i> Créditos:
                         <a href="{{ notice.source_url }}" target="_blank">{{ notice.source_name }}</a>
                       </span>
                     {% endif %}
