Define funçoes globais no jinja2

--- a/app/templates/admin/admin.html
+++ b/app/templates/admin/admin.html
@@ -23,6 +23,7 @@
                     <a href="{{ url_for('admin_finances') }}">Comunicação com ADMS</a>
                     <a href="{{ url_for('admin_finances') }}">Testes</a>
                     <a href="{{ url_for('admin_finances') }}">Graficos</a>
+                    <a href="">{{ teste }}</a>
                 </div>
             </div>
         </div>
