--- a/app/static/css/footer.css
+++ b/app/static/css/footer.css
@@ -1,145 +1,155 @@
 .web .footer {
-    display: block;
-    border-top: 2px solid #1a1a1a;
-    box-shadow: 0px 0px 10px #111111;
-    position: -webkit-sticky;
-    bottom: -100%;
-    justify-content: end;
+  display: block;
+  border-top: 2px solid #1a1a1a;
+  box-shadow: 0px 0px 10px #111111;
+  position: -webkit-sticky;
+  bottom: -100%;
+  justify-content: end;
 }
 
 .web .footer .footer-1part {
-    height: fit-content;
-    width: 100%;
-    background-color: #151515;
-    padding: 20px 0;
+  height: fit-content;
+  width: 100%;
+  background-color: #151515;
+  padding: 20px 0;
 }
 
 .web .footer .footer-1part .logo-img {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  animation: loads 0.4s linear;
 }
 
 .web .footer .footer-1part .logo-img img {
-    width: 200px;
+  width: 200px;
 }
 
 .web .footer .footer-1part .footer-items {
-    display: block;
+  display: block;
 }
 
 .web .footer .footer-1part .footer-items ul {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    padding: 25px 0;
-    list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  padding: 25px 0;
+  list-style-type: none;
 }
 
 .footer-1part .footer-items ul li {
-    margin: 5px 10px;
+  margin: 5px 10px;
 }
 
 .footer-1part .footer-items ul li a {
-    text-decoration: none;
-    color: #FFFFFF;
-    font-size: 14px;
+  position: relative;
+  text-decoration: none;
+  color: #FFFFFF;
+  font-size: 14px;
+  animation: loadsItems 0.9s linear;
 }
 
 .footer-1part .footer-items ul li a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .footer-items ul .home-list .home {
-    padding: 5px 12px;
-    border: 2px solid #ffa31a;
-    border-radius: 5px;
-    color: #ffa31a;
-    transition: all 0.1s linear;
+  padding: 5px 12px;
+  border: 2px solid #ffa31a;
+  border-radius: 5px;
+  color: #ffa31a;
+  transition: all 0.1s linear;
 }
 
 .footer-items ul .home-list .home:hover {
-    text-decoration: none;
-    color: #000000;
-    background-color: #ffa31a;
+  text-decoration: none;
+  color: #000000;
+  background-color: #ffa31a;
 }
 
 .web .footer .footer-2part {
-    display: flex;
-    padding: 10px 0;
-    height: fit-content;
-    width: 100%;
-    background-color: #000000;
-    border-top: 1px solid #212121;
+  display: flex;
+  padding: 10px 0;
+  height: fit-content;
+  width: 100%;
+  background-color: #000000;
+  border-top: 1px solid #212121;
 }
 
 .footer .footer-2part a {
-    margin: 0 15px;
-    text-decoration: none;
+  position: relative;
+  margin: 0 15px;
+  text-decoration: none;
+  animation: loadsItems 1.1s linear;
 }
 
 .footer .footer-2part a i {
-    font-size: 20px;
-    opacity: 0.7;
-    color: #FFFFFF;
-    -webkit-transition: all 0.2s linear;
-    -moz-transition: all 0.2s linear;
-    transition: all 0.2s linear;
+  font-size: 20px;
+  opacity: 0.7;
+  color: #FFFFFF;
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  transition: all 0.2s linear;
 }
 
 .footer .footer-2part a i:hover {
-    opacity: 1;
+  opacity: 1;
 }
 
 .footer .footer-2part .site-name {
-    margin: auto 30px auto auto;
-    text-align: center;
-    color: #738080;
-    user-select: none;
+  position: relative;
+  margin: auto 30px auto auto;
+  text-align: center;
+  color: #738080;
+  user-select: none;
+  animation: loadsItems 1.3s linear;
 }
 
 @media (max-width: 1025px) {
-    .web .footer {
-        display: block;
-        position: relative;
-    }
-    .web .footer .footer-1part .footer-items ul {
-        display: block;
-        align-items: center;
-    }
-    .web .footer .footer-1part .footer-items ul li {
-        display: block;
-        width: max-content;
-        margin-left: auto;
-        margin-right: auto;
-        font-size: 25px;
-    }
-    .footer-items ul li a {
-        font-size: 25px;
-    }
-    .footer-items ul .home-list {
-        margin-bottom: 20px;
-    }
-    .footer-items ul .home-list .home {
-        margin-bottom: 20px;
-    }
-    .web .footer .footer-2part {
-        display: block;
-    }
-    .web .footer .footer-2part .social {
-        width: max-content;
-        display: block;
-        margin: 15px auto;
-    }
-    .footer .footer-2part .social a {
-        margin-left: 15px;
-        margin-right: 15px;
-    }
-    .footer .footer-2part .site-name {
-        margin: 0px;
-    }
-    .footer .footer-2part a i {
-        font-size: 25px;
-    }
+  .web .footer {
+    display: block;
+    position: relative;
+  }
+  .web .footer .footer-1part .footer-items ul {
+    display: block;
+    align-items: center;
+  }
+  .web .footer .footer-1part .footer-items ul li {
+    display: block;
+    width: max-content;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 25px;
+  }
+  .footer-items ul li a {
+    font-size: 25px;
+    animation: loads 0.7s linear;
+  }
+  .footer-items ul .home-list {
+    margin-bottom: 20px;
+  }
+  .footer-items ul .home-list .home {
+    margin-bottom: 20px;
+  }
+  .web .footer .footer-2part {
+    display: block;
+  }
+  .web .footer .footer-2part .social {
+    width: max-content;
+    display: block;
+    margin: 15px auto;
+  }
+  .footer .footer-2part .social a {
+    position: relative;
+    margin-left: 15px;
+    margin-right: 15px;
+    animation: loadsItems 0.9s linear;
+  }
+  .footer .footer-2part .site-name {
+    margin: 0px;
+  }
+  .footer .footer-2part a i {
+    font-size: 25px;
+  }
 }
