--- a/app/static/css/global.css
+++ b/app/static/css/global.css
@@ -1,45 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Rose:wght@300;400;700&display=swap');
-  * {
-        margin: 0px;
-        padding: 0px;
-    }
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700;800&display=swap');
 
-    body {
-        min-height: 100vh;
-    }
+* {
+  margin: 0px;
+  padding: 0px;
+}
 
-    .web .payload {
-        min-height: 75vh;
-    }
+body {
+  min-height: 100vh;
+  background: #FFFFFF;
+  overflow-x: hidden;
+}
 
-    html,
-    body,
-    .web,
-    .payload {
-        background: #FFFFFF;
-        -webkit-transition: all 0.1s linear;
-        -moz-transition: all 0.1s linear;
-        transition: all 0.1s linear;
-    }
+.web .payload {
+  min-height: 75vh;
+}
 
-    body,
-    input,
-    button,
-    textarea,
-    select,
-    option,
-    pre {
-      font-family: 'Red Rose', cursive;
-        -webkit-transition: all 0.1s linear;
-        -moz-transition: all 0.1s linear;
-        transition: all 0.1s linear;
-    }
+body, input, button, textarea, select, option, pre {
+  font-family: 'Raleway', sans-serif;
+  -webkit-transition: all 0.1s linear;
+  -moz-transition: all 0.1s linear;
+  transition: all 0.1s linear;
+}
 
-    input {
-        -webkit-appearance: none;
-        appearance: none;
-    }
+input {
+  -webkit-appearance: none;
+  appearance: none;
+}
 
-    input:focus {
-        border: 0 none;
-    }
+input:focus {
+  border: 0 none;
+}
