--- a/app/templates/components/head.html
+++ b/app/templates/components/head.html
@@ -13,6 +13,7 @@
 <meta property="og:image:height" content="700">
 <meta property="og:locale" content="pt_BR">
 <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon_2.png') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/keyframes.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/header.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/footer.css') }}">
