--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,96 +2,68 @@
 <html lang="pt-br">
 
 <head>
-    {% include 'components/head.html' %}
-    <meta property="description" content="Site de notícias para gamers e e-esports" />
-    <meta property="og:description" content="Site de notícias para gamers e e-esports">
-    <meta property="og:image" content="{{ url_for('static', filename='favicon_2.png') }}">
-    <meta property="twitter:description" content="Maior site de notícias para gamers e e-esports" />
-    <meta property="twitter:image" content="{{ url_for('static', filename='favicon_2.png') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main_page.css') }}">
+  {% include 'components/head.html' %}
+  <meta property="description" content="Site de notícias para gamers e e-esports" />
+  <meta property="og:description" content="Site de notícias para gamers e e-esports">
+  <meta property="og:image" content="{{ url_for('static', filename='favicon_2.png') }}">
+  <meta property="twitter:description" content="Maior site de notícias para gamers e e-esports" />
+  <meta property="twitter:image" content="{{ url_for('static', filename='favicon_2.png') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
 </head>
 
 <body>
-    <div class='web'>
-        {% include 'components/header.html' %}
-        <div class="payload">
-            {% if last_notices != None %}
-            <div class="notices-body">
-                <div class="notices-top">
-                    <div class="notice-itens">
-                        <a class="notice1-url" href="{{ url_for('notice', id=last_notice.id) }}">
-                            <span class="notice-1">
-                                    <div class="notice-description">
-                                        <span class="title">{{ last_notice.title }}</span>
-                    </div>
-                    <div class="icon">
-                        <img src="{{ last_notice.cover_image }}" alt="{{ last_notice.title }}" />
-                    </div>
-                    <div class="notice-description">
-                        <span class="description">{{ last_notice.subtitle }}</span>
-                        <time class="addedAt" datetime="{{ last_notice.addedAt }}"><i class="far fa-clock" style="margin-right: 5px;"></i>{{ DatePost(last_notice.addedAt) }}</time>
-                    </div>
-                    </span>
-                    </a>
-                    <div class="rest">
-                        {% for notice in rest_notices %}
-                        <div class="notice-top-element">
-                            <a href="{{ url_for('notice', id=notice.id) }}" class="notice-top-url">
-                                <span class="notice-container-top">
-                                                <div class="notice-top-icon">
-                                                    <img
-                                                        src="{{ notice.cover_image }}"
-                                                        alt="{{ notice.title }}">
-                                                </div>
-                                                <div class="notice-top-description">
-                                                    <span class="notice-top-title">{{ notice.title }}</span>
-                                <span class="top-description">{{ notice.subtitle }}</span>
-                                <time class="notice-top-addedAt" datetime="{{ notice.addedAt }}"><i class="far fa-clock" style="margin-right: 5px;"></i>{{ DatePost(notice.addedAt) }}</time>
-                        </div>
-                        </span>
-                        </a>
-                    </div>
-                    {% endfor %}
-                </div>
+  <div class='web'>
+    {% include 'components/header.html' %}
+    <div class="payload">
+      <div class="home">
+        <div class="page">
+          <article class="header-art">
+            <h3 class="header-title">
+              <a href="{{ url_for('notice', id=posts.pages[0].header.id) }}">{{ posts.pages[0].header.title }}</a>
+            </h3>
+            <a href="{{ url_for('notice', id=posts.pages[0].header.id) }}">
+              <div class="header-pic">
+                <img src="{{ posts.pages[0].header.cover_image }}" alt="{{ posts.pages[0].header.title }}">
+              </div>
+            </a>
+            <p class="header-subtitle">
+              <a href="{{ url_for('notice', id=posts.pages[0].header.id) }}">{{ posts.pages[0].header.subtitle }}</a>
+            </p>
+            <div class="infos">
+              <a class="postedBy" href=""><i class="fas fa-user-tag">
+                  {{ posts.pages[0].header.posted_by.name + ' ' + posts.pages[0].header.posted_by.surname }}</i></a>
+              <time datetime="{{ posts.pages[0].header.addedAt }}"><i class="far fa-clock">
+                  {{ DatePost(posts.pages[0].header.addedAt) }}</i></time>
             </div>
+          </article>
+          {% for post in posts.pages[0].notices %}
+          <article class="rest-art">
+            <a href="{{ url_for('notice', id=post.id) }}">
+              <div class="rest-pic">
+                <img src="{{ post.cover_image }}" alt="{{ post.title }}" title="{{ post.title }}">
+              </div>
+            </a>
+            <div class="infos">
+              <h3 class="rest-title">
+                <a title="{{ post.title }}" href="{{ url_for('notice', id=post.id) }}">{{ post.title }}</a>
+              </h3>
+              <p class="rest-subtitle">
+                <a href="{{ url_for('notice', id=post.id) }}">{{ post.subtitle }}</a>
+              </p>
+              <a class="postedBy" href=""><i class="fas fa-user-tag">
+                  {{ post.posted_by.name + ' ' + post.posted_by.surname }}</i></a>
+              <time datetime="{{ post.addedAt }}"><i class="far fa-clock">
+                  {{ DatePost(posts.pages[0].header.addedAt) }}</i></time>
+            </div>
+          </article>
+          {% endfor %}
         </div>
-        {% for game in games %} {% if game.id != 0 and limit_notices(game.id, last_notices) != None %}
-        <div class="all-notices">
-            <div class="header-all-notices">
-                <div class="notice-category">
-                    <span class="notice-category-name">{{ game.name }}</span>
-                </div>
-                <a href="{{ url_for('notices_by_game', name=game.name) }}" class="more-notices">Ver mais</a>
-            </div>
-            <div class="elements">
-                {% for notice in limit_notices(game.id, last_notices) %}
-                <div class="notice-element">
-                    <a href="{{ url_for('notice', id=notice.id) }}" class="notice-url">
-                        <span class="notice-container">
-                                                    <div class="notice-icon">
-                                                        <img
-                                                            src="{{ notice.cover_image }}"
-                                                            alt="{{ notice.title }}"
-                                                        />
-                                                    </div>
-                                                    <div class="notice-description">
-                                                        <span class="notice-title">{{ notice.title }}</span>
-                        <span class="notice-description">{{ notice.subtitle }}</span>
-                        <time class="notice-addedAt" datetime="{{ notice.addedAt }}"><i class="far fa-clock" style="margin-right: 5px;"></i>{{ DatePost(notice.addedAt) }}</time>
-                </div>
-                </span>
-                </a>
-            </div>
-            {% endfor %}
-            <a href="{{ url_for('notices_by_game', name=game.name) }}" class="more-notices2">{{ 'Ver mais de ' + game.name }}</a>
-        </div>
-    </div>
-    {% endif %} {% endfor %}
-    </div>
-    {% endif %}
+      </div>
+      <div class="loads" style="position: relative;"></div>
     </div>
     {% include 'components/footer.html' %}
-    </div>
+  </div>
+  <script src="{{ url_for('static', filename='javascript/index.js') }}"></script>
 </body>
 
 </html>
