--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -23,6 +23,19 @@
   opacity: 0.7;
 }
 
+.category {
+  margin-bottom: 10px;
+}
+
+.category a {
+  color: #ffa31a;
+  text-transform: uppercase;
+  letter-spacing: 0.03rem;
+  font-size: 12px;
+  font-weight: 700;
+  text-decoration: none;
+}
+
 .home .page .header-art .header-title a {
   font-size: 28px;
   font-weight: 800;
