--- a/app/templates/components/header.html
+++ b/app/templates/components/header.html
@@ -158,6 +158,18 @@
         <li>
           <a href="{{ url_for('index') }}" class="header-1part-1opc">Principais notícias</a>
         </li>
+        <!--<li>
+          <a href="{{ url_for('e_sports') }}" class="header-1part-1opc">e-Sports</a>
+        </li>-->
+        <li>
+          <a href="{{ url_for('gaming_news') }}" class="header-1part-1opc">Gaming News</a>
+        </li>
+        <!--<li>
+          <a href="{{ url_for('stream') }}" class="header-1part-1opc">Stream</a>
+        </li>-->
+        <li>
+          <a href="{{ url_for('trailer') }}" class="header-1part-1opc">Trailers</a>
+        </li>
         <!-- <li>
           <input type="checkbox" id="mo3" class="input-second-options-mobile">
           <label for="mo3">
