--- a/app/templates/pages/categories.html
+++ b/app/templates/pages/categories.html
@@ -18,7 +18,6 @@
       <div class="home">
         <div class="page">
           <article class="header-art">
-            <div class="category"><a href="{{ posts.pages[0].header.category.url }}">{{ posts.pages[0].header.category.name }}</a></div>
             <h3 class="header-title">
               <a href="{{ url_for('notice', id=posts.pages[0].header.id) }}">{{ posts.pages[0].header.title }}</a>
             </h3>
@@ -45,7 +44,6 @@
               </div>
             </a>
             <div class="infos">
-              <div class="category"><a href="{{ post.category.url }}">{{ post.category.name }}</a></div>
               <h3 class="rest-title">
                 <a title="{{ post.title }}" href="{{ url_for('notice', id=post.id) }}">{{ post.title }}</a>
               </h3>
@@ -65,7 +63,7 @@
     </div>
     {% include 'components/footer.html' %}
   </div>
-  <script src="{{ url_for('static', filename='javascript/index.js') }}"></script>
+  <script src="{{ url_for('static', filename='javascript/categories.js') }}"></script>
 </body>
 
 </html>
