--- a/app/templates/pages/categories.html
+++ b/app/templates/pages/categories.html
@@ -59,7 +59,10 @@
           {% endfor %}
         </div>
       </div>
-      <div class="loads" style="position: relative;"></div>
+      <div class="loads" style="position: relative;">
+        <i class="fas fa-spinner"></i>
+        Carregando
+      </div>
     </div>
     {% include 'components/footer.html' %}
   </div>
