--- a/app/static/css/keyframes.css
+++ b/app/static/css/keyframes.css
@@ -33,3 +33,11 @@
     opacity: 1;
   }
 }
+
+@keyframes Loading {
+  from {
+    transform: rotate(0deg);
+  } to {
+    transform: rotate(360deg);
+  }
+}
