--- a/app/static/css/global.css
+++ b/app/static/css/global.css
@@ -17,7 +17,7 @@ body {
 }
 
 body, input, button, textarea, select, option, pre {
-  font-family: 'Raleway', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-transition: all 0.1s linear;
   -moz-transition: all 0.1s linear;
   transition: all 0.1s linear;
