--- a/app/static/css/new_post.css
+++ b/app/static/css/new_post.css
@@ -186,7 +186,7 @@
 }
 
 #submit-loads {
-  animation: Loading 0.7s infinite;
+  animation: Loading 0.7s infinite linear;
   margin-right: 5px;
 }
 
