--- a/app/static/css/keyframes.css
+++ b/app/static/css/keyframes.css
@@ -21,8 +21,7 @@
   0% {
     opacity: 0;
   }
-  25% {
-  }
+  25% {}
   50% {
     opacity: 0;
   }
@@ -37,7 +36,8 @@
 @keyframes Loading {
   from {
     transform: rotate(0deg);
-  } to {
+  }
+  to {
     transform: rotate(360deg);
   }
 }
