--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,10 +3,10 @@
 
 <head>
   {% include 'components/head.html' %}
-  <meta property="description" content="Site de notícias para gamers e e-esports" />
-  <meta property="og:description" content="Site de notícias para gamers e e-esports">
+  <meta name="description" content="Notícias para gamers - Gaming news, eSports, Trailers e Streamers." />
+  <meta property="og:description" content="Notícias para gamers - Gaming news, eSports, Trailers e Streamers.">
   <meta property="og:image" content="{{ url_for('static', filename='favicon_2.png') }}">
-  <meta property="twitter:description" content="Maior site de notícias para gamers e e-esports" />
+  <meta property="twitter:description" content="Maior Notícias para gamers - Gaming news, eSports, Trailers e Streamers." />
   <meta property="twitter:image" content="{{ url_for('static', filename='favicon_2.png') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
 </head>
