--- a/app/templates/notices/notice.html
+++ b/app/templates/notices/notice.html
@@ -4,7 +4,7 @@
 <head>
     {% include 'components/head.html' %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/notice.css') }}">
-    <meta property="description" content="{{ notice.subtitle }}" />
+    <meta name="description" content="{{ notice.subtitle }}" />
     <meta property="og:description" content="{{ notice.subtitle }}">
     <meta property="og:image" content="{{ notice.cover_image }}" />
     <meta property="twitter:description" content="{{ notice.subtitle }}" class="twitter-description" />
