Versão mobile de adicionar noticia

--- a/app/static/css/editor.css
+++ b/app/static/css/editor.css
@@ -27,6 +27,7 @@
 }
 
 .editor-container .editor-options ul li {
+  display: flex;
   position: relative;
   color: #FFFFFF;
   font-weight: 400;
@@ -175,4 +176,42 @@
     max-height: 430px;
     height: 52vw;
   }
+
+  #social-finder-container .social-finder-button {
+    position: relative;
+    left: -2px;
+    padding: 5px 8px;
+    display: flex;
+  }
+
+  #social-finder-container .social-finder-button i {
+    margin-right: 10px;
+  }
+
+  .editor-container .editor-options {
+    width: 100%;
+    position: fixed;
+    display: flex;
+    overflow-x: scroll;
+    top: auto;
+    bottom: 0px;
+    left: 0px;
+    visibility: visible;
+    justify-content: center;
+    border-radius: 0;
+  }
+
+  .editor-container .editor-options .options {
+    display: flex;
+    border: 1px solid #111111;
+  }
+
+  .editor-container .editor-options ul li {
+    font-size: 18px;
+  }
+
+  .editor-container .editor-options ul li p {
+    display: none;
+  }
 }
+
